news, detai news, mat-bang, menu

--- a/can-ho.html
+++ b/can-ho.html
@@ -89,8 +89,7 @@
 				    <li class="uk-active"><a href="#">Giới thiệu</a></li>
 				    <li><a href="#my-id-position"  data-uk-modal> Tổng Quan</a></li>
 				    <li><a href="can-ho.html"> Victory Tower</a></li>
-				    <li><a href="#"> Happy Tower</a></li>
-				    <li><a href="#"> Elite Tower</a></li>
+				    <li><a href="mat-bang.html"> Mặt Bằng</a></li>
 				    <li><a href="#"> Tiện Ích căn hộ</a></li>
 				    <li><a href="news.html"> Tin Tức Sự Kiện</a></li>
 				    <li><a href="#"> Liên Hệ</a></li>
@@ -328,14 +327,14 @@
 			<footer>
 				<div class="footer">
 					<ul class="uk-nav">
-					    <li class="uk-active"><a href="#">Home </a></li>
-					    <li class=""><a href="#"> Tổng quang</a></li>
-					    <li class=""><a href="#"> Happy Tower</a></li>
-					    <li class=""><a href="#"> Elite Tower</a></li>
-					    <li class=""><a href="#"> Victory Tower</a></li>
-					    <li class=""><a href="#"> Tiện ích căn hộ</a></li>
-					    <li class=""><a href="#"> Tin tức - sự kiện</a></li>
-					    <li class=""><a href="#"> Liên Hệ</a></li>
+					    <li class="uk-active"><a href="./">Home </a></li>
+					    <li class=""><a href="#my-id-position"  data-uk-modal> Tổng quang</a></li>
+					    <li class=""><a href="can-ho.html"> Happy Tower</a></li>
+					    <li class=""><a href="can-ho.html"> Elite Tower</a></li>
+					    <li class=""><a href="can-ho.html"> Victory Tower</a></li>
+					    <li class=""><a href="can-ho.html"> Tiện ích căn hộ</a></li>
+					    <li class=""><a href="news.html"> Tin tức - sự kiện</a></li>
+					    <li class=""><a href="contact.html"> Liên Hệ</a></li>
 					</ul>
 					<ul class="nav info">
 						<li><a href="#" title="donghuyviet@gmail.com"> Email: donghuyviet@gmail.com</a></li>
