--- a/contact.html
+++ b/contact.html
@@ -103,34 +103,14 @@
 				<div class="uk-panel text">© 2016 Copyright by Hanoi Paragon | Queenland.vn</div>
 			</div>
 		</div>
-		<div class="slideshow">
-			<div class="uk-slidenav-position" data-uk-slideshow="{kenburns:true, autoplay:true}">
-	            <ul class="uk-slideshow" data-uk-slideshow="{kenburns:true}">
-	                <li data-slideshow-slide="img"><img src="samples/banner.jpg"></li>
-	                <li data-slideshow-slide="img"><img src="samples/tien-ich-01.jpg"></li>
-	                <li data-slideshow-slide="img"><img src="samples/tien-ich-02.jpg"></li>
-	            </ul>
-	            <ul class="uk-dotnav uk-dotnav-contrast uk-position-bottom uk-flex-center">
-		        <li data-uk-slideshow-item="0"><a href=""></a></li>
-		        <li data-uk-slideshow-item="1"><a href=""></a></li>
-		        <li data-uk-slideshow-item="2"><a href=""></a></li>
-		    </ul>
-	        </div>
-		</div>
-		<!-- hot new -->
-		<div class="hot-news uk-animation-slide-right">
-			<!-- <div class="news">
-				<a href=""><img class="uk-border-circle" src="samples/video.png"></a>
-				<div class="item-news">
-					<h2>Tin mới</h2>
-					<a href="#"> Đợt mở bán đầu tiên Paragon Hà Nội</a>
-				 </div>
-			</div> -->
-			<div class="pound video">
-				<a href=""><span class="player"></span><img class="uk-border-circle" src="samples/video.png"></a>
-				<span class="name">video dự án</span>
+		<div class="contact">
+			<div class="form-contact">
+				<form action="contact-content_submit" method="get" accept-charset="utf-8" class="uk-form">
+				 	
+				 </form> 
 			</div>
 		</div>
+		<!-- hot new -->
 		<!-- tel me -->
 		<div class="hotline uk-animation-slide-bottom">
 			<ul class="uk-nav uk-text-center"> <li><a href="tel:0912889138"> <i class="uk-icon-phone uk-animation-fade uk-animation-scale-up"></i>0912 889 138</a></li></ul>
@@ -177,23 +157,7 @@
 		<!-- end desktop -->
 		<div class="mobile-table">
 			<!-- Mobile -->
-			<div class="uitility">
-				<div class="uk-panel">
-					<div class="title uk-text-center"> Paragon Hà Nội</div>
-					<div class="description uk-text-center">
-						Dự án PARAGON HÀ NỘI sở hữu một vị trí trung tâm khu vực quận Cầu Giấy, nơi tiếp giáp với hàng loạt các tuyến đường huyết mạch của khu vực phía Tây Hà Nội như: Phạm Hùng, Xuận Thủy, Duy Tân, Phạm Văn Đồng, Cầu Giấy.
-					</div>
-					<div class="view"> <a href="#">Tiện ích dự án</a></div>
-				</div>
-			</div>
-			<div class="position">
-				<a href="#my-id-position" class="zoom" data-uk-modal></a>
-				<img src="samples/vi-tri.jpg">
-			</div>
-			<div class="title"> Thông tin căn hộ</div>
 			<div class="info-shophouse">
-				<div class="description"> <p>Các căn hộ PARAGON có thiết kế hiện tại diện tích từ 88 m2 - 130m2. Hệ thống cây xanh bao quanh, trung tâm thương mại cao cấp, nằm gần các bệnh viện lớn như: Viện huyết học, Bệnh viện 198, Bệnh viện y học cổ truyền, Viện E, Bệnh viện thể thao.</p></div>
-				<img src="samples/banner.jpg">
 				<div class="view uiti"> <a href="#">Thông tin căn hộ</a></div>
 			</div>
 			<!-- download info -->
