--- a/news.html
+++ b/news.html
@@ -89,10 +89,9 @@
 				    <li class="uk-active"><a href="#">Giới thiệu</a></li>
 				    <li><a href="#my-id-position"  data-uk-modal> Tổng Quan</a></li>
 				    <li><a href="can-ho.html"> Victory Tower</a></li>
-				    <li><a href="#"> Happy Tower</a></li>
-				    <li><a href="#"> Elite Tower</a></li>
+				    <li><a href="mat-bang.html"> Mặt Bằng</a></li>
 				    <li><a href="#"> Tiện Ích căn hộ</a></li>
-				    <li><a href="#"> Tin Tức Sự Kiện</a></li>
+				    <li><a href="news.html"> Tin Tức Sự Kiện</a></li>
 				    <li><a href="#"> Liên Hệ</a></li>
 				</ul>
 			</div>
@@ -109,7 +108,7 @@
 		<div class="list-news right-content">
 			<div class="title"> Tin Tức - Sự Kiện</div>
 			<div class="news uk-grid uk-grid-small uk-grid-width-1-1 uk-grid-width-medium-1-2">
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -119,7 +118,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -129,7 +128,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -139,7 +138,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -149,7 +148,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -159,7 +158,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -169,7 +168,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -179,7 +178,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -189,7 +188,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -200,7 +199,7 @@
 					</div>
 				</div>
 
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -210,7 +209,7 @@
 						<a class="readmore" href="news-detail.html">xem tiếp</a>
 					</div>
 				</div>
-				<div class=" item-news ">
+				<div class=" item-news uk-animation-slide-left ">
 					<div class="news-img">
 						<a href=""><img class="uk-border-rounded" src="samples/tien-ich-02.jpg"></a>
 					</div>
@@ -291,14 +290,14 @@
 			<footer>
 				<div class="footer">
 					<ul class="uk-nav">
-					    <li class="uk-active"><a href="#">Home </a></li>
-					    <li class=""><a href="#"> Tổng quang</a></li>
-					    <li class=""><a href="#"> Happy Tower</a></li>
-					    <li class=""><a href="#"> Elite Tower</a></li>
-					    <li class=""><a href="#"> Victory Tower</a></li>
-					    <li class=""><a href="#"> Tiện ích căn hộ</a></li>
-					    <li class=""><a href="#"> Tin tức - sự kiện</a></li>
-					    <li class=""><a href="#"> Liên Hệ</a></li>
+					    <li class="uk-active"><a href="./">Home </a></li>
+					    <li class=""><a href="#my-id-position"  data-uk-modal> Tổng quan</a></li>
+					    <li class=""><a href="can-ho.html"> Happy Tower</a></li>
+					    <li class=""><a href="can-ho.html"> Elite Tower</a></li>
+					    <li class=""><a href="can-ho.html"> Victory Tower</a></li>
+					    <li class=""><a href="can-ho.html"> Tiện ích căn hộ</a></li>
+					    <li class=""><a href="news.html"> Tin tức - sự kiện</a></li>
+					    <li class=""><a href="contact.html"> Liên Hệ</a></li>
 					</ul>
 					<ul class="nav info">
 						<li><a href="#" title="donghuyviet@gmail.com"> Email: donghuyviet@gmail.com</a></li>
